--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.4e Beta"
+version = "1.5 Beta 1"
 group= "me.kemal.randomp" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "RandomPeripherals"
 
@@ -27,6 +27,12 @@ targetCompatibility = 1.7
 minecraft {
     version = "1.7.10-10.13.4.1448-1.7.10"
     runDir = "eclipse"
+}
+
+jar {
+        manifest {
+        attributes 'FMLAT': 'randomperipherals_at.cfg'
+    }
 }
 
 dependencies {
